simple change on `doc`

--- a/omega/components/omega_side/side/只写了一部分的开发文档.md
+++ b/omega/components/omega_side/side/只写了一部分的开发文档.md
@@ -159,9 +159,9 @@ async def test(frame:MainFrame):
 frame.add_plugin(test)
 ```
 
-- 获得 `NewUqHolder` 信息
-    - `NewUqHolder` 是由 `PhoenixBuilder` 负责更新的，主要为 `Bdump/blockNBT API` 服务的结构体
-    - 现阶段 `NewUqHolder` 会回传下列数据
+- 获得 `NewUQHolder` 信息
+    - `NewUQHolder` 是由 `PhoenixBuilder` 负责更新的，主要为 `Bdump/blockNBT API` 服务的结构体
+    - 现阶段 `NewUQHolder` 会回传下列数据
 
         ```go
         // 存放数据包的处理结果；理论上，这些结果应该由此结构体的 HandlePacket 方法实时更新
